# splat-replay2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .taskfile.md  .worktree-copy-paths  AGENTS.md  DESIGN.md  README.md  Taskfile.yml  pyproject.toml  splat-replay-webview.spec  splatoon3_weapons_gamewith.csv
backend/: README.md  pyproject.toml
backend/assets/matching/weapon/generated_labeling_variants/: manifest.json
backend/config/: image_matching.yaml  settings.example.toml
backend/packaging/: splat-replay-webview.spec
backend/scripts/: build_weapon_labeling_variant_bank.py  compare_weapon_eval.py  evaluate_weapon_labeling.py  sync_weapon_templates.py  test_transcription.py
backend/src/splat_replay/: __init__.py
backend/src/splat_replay/application/: AGENTS.md  __init__.py
backend/src/splat_replay/application/dto/: __init__.py  assets.py  metadata.py  replay.py  subtitle.py
backend/src/splat_replay/application/events/: types.py
backend/src/splat_replay/application/interfaces/: __init__.py  audio.py  common.py  data.py  history.py  image.py  messaging.py  recording.py  system.py  upload.py  video.py  weapon_detection.py
backend/src/splat_replay/application/metadata/: __init__.py  codec.py  schema.py
backend/src/splat_replay/application/services/: __init__.py
backend/src/splat_replay/application/services/checkers/: __init__.py  ffmpeg_checker.py  obs_checker.py  tesseract_checker.py
backend/src/splat_replay/application/services/common/: __init__.py  battle_history_service.py  progress.py  queries.py  recorded_video_mapper.py  settings_service.py  subtitle_converter.py
backend/src/splat_replay/application/services/editing/: __init__.py  auto_editor.py  editing_state.py  metadata_parser.py  subtitle_processor.py  thumbnail_generator.py  title_description_generator.py  video_grouping_service.py
backend/src/splat_replay/application/services/errors/: __init__.py  error_handler.py  error_logger.py  (+1 more)
backend/src/splat_replay/application/use_cases/: __init__.py  auto.py  auto_recording_use_case.py  upload.py
backend/src/splat_replay/bootstrap/: __init__.py  cli.py  dev_server.py  pyinstaller_hiddenimports.py  web_app.py  webview.py
backend/src/splat_replay/domain/: AGENTS.md  __init__.py
backend/src/splat_replay/domain/config/: __init__.py  app.py  behavior.py  capture_device.py  image_matching.py  obs.py  remote_access.py  speech_transcriber.py  upload.py  video_edit.py  video_storage.py  webview.py
backend/src/splat_replay/domain/events/: __init__.py  asset_events.py  base.py  battle_events.py  process_events.py  recording_events.py  speech_events.py
backend/src/splat_replay/domain/exceptions/: __init__.py
backend/src/splat_replay/domain/models/: __init__.py  aliases.py  game_mode.py  installation_state.py  match.py  rate.py  recording_metadata.py  result.py  time_schedule.py  video_asset.py
backend/src/splat_replay/domain/ports/: __init__.py  battle_medal_recognizer.py  image_editor.py  image_matcher.py
backend/src/splat_replay/domain/repositories/: __init__.py  setup_state_repository.py
backend/src/splat_replay/domain/services/: __init__.py  state_machine.py
backend/src/splat_replay/infrastructure/: AGENTS.md  __init__.py  test_input.py
backend/src/splat_replay/infrastructure/adapters/: __init__.py
backend/src/splat_replay/infrastructure/config/: __init__.py  loaders.py
backend/src/splat_replay/infrastructure/di/: __init__.py  adapters.py  app_services.py  config.py  domain_services.py  use_cases.py
backend/src/splat_replay/infrastructure/filesystem/: __init__.py  paths.py
backend/src/splat_replay/infrastructure/logging/: __init__.py  logger.py
backend/src/splat_replay/infrastructure/matchers/: __init__.py  base.py  composite.py  edge.py  hash.py  hsv_ratio.py  registry.py  rgb.py  template.py  uniform.py
backend/src/splat_replay/infrastructure/messaging/: __init__.py  command_bus.py  event_bus.py  frame_hub.py
backend/src/splat_replay/infrastructure/repositories/: __init__.py  asset_file_operations.py  battle_history_repo.py  edited_asset_repo.py  recorded_asset_repo.py  video_asset_repo.py
backend/src/splat_replay/infrastructure/runtime/: __init__.py  app_runtime.py
backend/src/splat_replay/interface/: AGENTS.md  __init__.py
backend/src/splat_replay/interface/cli/: __init__.py  logging_utils.py  main.py
backend/src/splat_replay/interface/gui/: __init__.py  webview_app.py  webview_runtime.py
backend/src/splat_replay/interface/web/: __init__.py  app.py  app_factory.py  error_handler.py  server.py
backend/tests/: PERFORMANCE_TESTING.md  conftest.py  test_asset_file_operations.py  test_auto_recording_use_case.py  test_battle_history.py  test_battle_medal_metadata_support.py  test_battle_medal_recognition_adapter.py  test_bootstrap_imports.py  test_build_weapon_labeling_variant_bank.py  test_capture_clock.py  test_capture_device_recovery.py  test_cli_remote_access.py  test_delete_recorded_video_use_case.py  test_dev_server.py  test_domain_models.py  test_e2e_test_input_adapters.py  test_edit_upload_process_options.py  test_frame_analyzer.py  test_frame_analyzer_performance.py  test_frame_capture_producer.py  test_handler_performance.py  test_ingame_handler_weapon_detection_cancel.py  test_labeling_variant_bank.py  test_list_recorded_videos_use_case.py  test_metadata_contracts.py  test_ndi_capture.py  test_noop_upload_port.py  test_predict_weapons_output.py  test_pyinstaller_hiddenimports.py  test_recorded_asset_repo.py  test_recording_audio_health.py  test_recording_preview_api.py  test_recording_session_cancel.py  test_remote_access_router.py  test_start_edit_upload_use_case.py  test_state_machine.py  test_sync_weapon_templates.py  test_template_matcher.py  test_test_input_replay.py  test_thumbnail_assets.py  (+15 more)
backend/tests/integration/: test_api_contract.py  test_assets_router_contracts.py  test_remote_access_router_contracts.py  test_settings_router_contracts.py  test_setup_router_contracts.py
backend/tests/interface/web/: test_app_factory.py
backend/typings/speech_recognition/: __init__.pyi
(+646 files in other folders)
