[project]
name = "splat-replay2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9",
    "click>=8.1,<8.2",
    "pydantic>=1.10,<2",
    "punq>=0.7",
    "structlog>=24.1",
    "obs-websocket-py>=1.0",
    "psutil>=5.9",
    "pywin32>=306; platform_system == 'Windows'",
    "pyyaml>=6.0",
    "opencv-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "speechrecognition>=3.14.3",
    "groq>=0.29.0",
    "pyaudio>=0.2.14",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-api-python-client>=2.176.0",
    "srt>=3.5.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[project.scripts]
splat-replay = "splat_replay.cli:app"

[tool.ruff]
line-length = 79
exclude = [".venv"]

