[project]
name = "splat-replay2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9",
    "click>=8.1,<8.2",
    "pydantic>=1.10,<2",
    "punq>=0.7",
    "structlog>=24.1",
    "psutil>=5.9",
    "pywin32>=306; platform_system == 'Windows'",
    "types-pywin32>=306; platform_system == 'Windows'",
    "pyyaml>=6.0",
    "opencv-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "speechrecognition>=3.14.3",
    "groq>=0.29.0",
    "pyaudio>=0.2.14; platform_system == 'Windows'",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-api-python-client>=2.176.0",
    "srt>=3.5.3",
    "obs-ws-client>=0.1.0",
    "tomli-w>=1.0.0",
    "pillow>=10.0.0",
    "darkdetect>=0.8.0",
    "ttkbootstrap>=1.14.2",
    "comtypes>=1.4.11",
    "dateparser>=1.2.2",
    "pytest-asyncio>=1.1.0",
    "webrtcvad>=2.0.10",
    "setuptools>=80.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["mypy>=1.16.0", "pytest>=8.4.0", "ruff>=0.12.0"]

[project.scripts]
splat-replay = "splat_replay.cli:app"

[tool.ruff]
line-length = 79
exclude = [".venv"]
indent-width = 4

[tool.mypy]
python_version = "3.13"
exclude = ["^src/splat_replay/gui/"]
mypy_path = ["typings"]

[[tool.mypy.overrides]]
module = "splat_replay.gui.*"
ignore_errors = true
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true



