[project]
name = "splat-replay2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9",
    "click>=8.1,<8.2",
    "pydantic>=1.10,<2",
    "punq>=0.7",
    "structlog>=24.1",
    "psutil>=5.9",
    "types-psutil>=7.1.3.20251211",
    "httpx>=0.28.1",
    "pywin32>=306; platform_system == 'Windows'",
    "types-pywin32>=306; platform_system == 'Windows'",
    "pyyaml>=6.0",
    "opencv-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "speechrecognition>=3.14.3",
    "groq>=0.29.0",
    "pyaudio>=0.2.14; platform_system == 'Windows'",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-api-python-client>=2.176.0",
    "google-api-python-client-stubs>=1.31.0",
    "srt>=3.5.3",
    "obs-ws-client>=0.1.0",
    "tomli-w>=1.0.0",
    "pillow>=10.0.0",
    "comtypes>=1.4.11",
    "dateparser>=1.2.2",
    "pytest-asyncio>=1.1.0",
    "webrtcvad>=2.0.10",
    "setuptools>=80.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "sse-starlette>=3.0.2",
    "pywebview>=5.3",
    "cyndilib>=0.0.8",
    "pygrabber>=0.2",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ty>=0.0.1",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
    "pre-commit>=4.0.0",
    "import-linter>=2.0",
]
build = ["pyinstaller>=6.0.0"]

[project.scripts]
splat-replay = "splat_replay.bootstrap.cli:app"
splat-replay-webview = "splat_replay.bootstrap.webview:main"

[tool.ruff]
line-length = 79
exclude = [".venv"]
indent-width = 4

[tool.pyright]
stubPath = "typings"
extraPaths = ["typings"]

[tool.pytest.ini_options]
markers = [
    "perf: performance tests (deselect with '-m \"not perf\"')",
]
addopts = "-m 'not perf'"

[tool.ty.environment]
extra-paths = ["typings"]

[tool.importlinter]
root_packages = ["splat_replay"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain layer must not import from any other layer"
type = "forbidden"
source_modules = ["splat_replay.domain"]
forbidden_modules = [
    "splat_replay.application",
    "splat_replay.infrastructure",
    "splat_replay.interface",
]

[[tool.importlinter.contracts]]
name = "Pydantic is only allowed in domain config"
type = "forbidden"
source_modules = ["splat_replay.domain"]
forbidden_modules = ["pydantic"]
ignore_imports = [
    "splat_replay.domain.config.app -> pydantic",
    "splat_replay.domain.config.behavior -> pydantic",
    "splat_replay.domain.config.capture_device -> pydantic",
    "splat_replay.domain.config.image_matching -> pydantic",
    "splat_replay.domain.config.obs -> pydantic",
    "splat_replay.domain.config.record -> pydantic",
    "splat_replay.domain.config.speech_transcriber -> pydantic",
    "splat_replay.domain.config.upload -> pydantic",
    "splat_replay.domain.config.video_edit -> pydantic",
    "splat_replay.domain.config.video_storage -> pydantic",
]

[[tool.importlinter.contracts]]
name = "Application layer must not import from Infrastructure or Interface"
type = "forbidden"
source_modules = ["splat_replay.application"]
forbidden_modules = [
    "splat_replay.infrastructure",
    "splat_replay.interface",
]

[[tool.importlinter.contracts]]
name = "Layers follow dependency direction (interface -> application -> domain)"
type = "layers"
layers = [
    "splat_replay.interface",
    "splat_replay.application",
    "splat_replay.domain",
]

[[tool.importlinter.contracts]]
name = "Interface and Infrastructure must be independent"
type = "independence"
modules = [
    "splat_replay.interface",
    "splat_replay.infrastructure",
]

[[tool.importlinter.contracts]]
name = "Layers must not import bootstrap"
type = "forbidden"
source_modules = [
    "splat_replay.domain",
    "splat_replay.application",
    "splat_replay.infrastructure",
    "splat_replay.interface",
]
forbidden_modules = ["splat_replay.bootstrap"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
